adds company name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
+							<h1>Delta Business Partners</h1>
 							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 							<h1>Norman Berg</h1>
 							<p>Business Broker</p>
