adds new bg, contact info, right side

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
-
+			<div id="wrapper" class="right">
+				
 				<!-- Main -->
-					<section id="main">
+					<section id="main" >
 						<header>
 							<h1>Delta Business Partners</h1>
-							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
-							<h1>Norman Berg</h1>
-							<p>Business Broker</p>
+							<span class="avatar"><img src="images/avatar_icon.jpg" alt="" /></span>
+							<h1>Norman T Berg</h1>
 						</header>
 						<!--
 						<hr />
@@ -64,8 +63,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon fa-envelope">Email</a></li>
-								<li><a href="#" class="icon brands fa-linkedin">LinkedIn</a></li>
+								<li><a href="mailto:norman@deltabusinesspartners.com" class="icon fa-envelope">Email</a></li>
+								<li><a href="tel:+3129446000" class="icon solid fa-phone">Phone</a></li>
 							</ul>
 						</footer>
 					</section>
