--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							<h1>Delta Business Partners</h1>
 							<span class="avatar"><img src="images/avatar_icon.jpg" alt="" /></span>
 							<h1>Norman T Berg</h1>
+							<p>Business Broker</p>
 						</header>
 						<!--
 						<hr />
