--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
 		<title>Delta Business Partners</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
 	<body class="is-preload">
-
+		
+		<!-- <div>Current website is under construction!</div> -->
 		<!-- Wrapper -->
-			<div id="wrapper" class="right">
+		<div id="wrapper" class="right">
+			<div class="alert alert-danger center">
+				<i class="md-icon dp18 alert-icon mr-3"></i>Current website is under construction!
+			</div>
 				
 				<!-- Main -->
-					<section id="main" >
+				<div class="right">
+					<section id="main">
 						<header>
 							<h1>Delta Business Partners</h1>
 							<span class="avatar"><img src="images/avatar_icon.jpg" alt="" /></span>
@@ -69,7 +82,7 @@
 							</ul>
 						</footer>
 					</section>
-
+				</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
