changes background and image

--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delta Business Partners</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Delta Business Partners</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
 
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
-  <link rel="stylesheet" href="main.css" />
-</head>
-<body>
-  <div class="container-fluid">
-  
-  <div class="alert alert-danger center bold">
-    <i class="md-icon dp18 alert-icon mr-3"></i>Current website is under construction!
-  </div>
-  <div class="card card-background center card-properties">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <!-- </div> style="width: 32%; height:fit-content"> -->
-    <h1 class="card-text-color">Delta Business Partners</h1>
-    <img src="avatar_icon.jpg" class="my-card-img card-img-top" alt="...">
-    <div class="card-body">
-      <h2 class="card-title card-text-color">Norman T Berg</h2>
-      <p class="card-text card-text-color">Business Broker</p>
-      
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="card card-background center card-properties">
+        <!-- </div> style="width: 32%; height:fit-content"> -->
+        <h1 class="card-text-color">Delta Business Partners</h1>
+        <img src="Norm.jpg" class="my-card-img card-img-top" alt="..." />
+        <div class="card-body">
+          <h2 class="card-title card-text-color">Norman T Berg</h2>
+          <p class="card-text card-text-color">Business Broker</p>
+
           <a href="mailto:norman@deltabusinesspartners.com" class="glyphicon glyphicon-envelope icon btn"></a>
           <a href="tel:+3129446000" class="glyphicon glyphicon-phone icon btn"></a>
-      
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-</body>
+  </body>
 
-<div class="footer">
-  Designed by: <a href="http://www.remingtonberg.com">Remington Berg</a>
-</div>
+  <div class="footer">
+    Designed by:
+    <a href="http://www.remingtonberg.com">Remington Berg</a>
+  </div>
 </html>
